--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "gm": "^1.23.1",
         "hbs": "^4.1.0",
         "http-errors": "~1.6.2",
+        "jimp": "^0.16.1",
         "jquery": "^3.4.1",
         "lodash": "^4.17.15",
         "moment": "^2.22.2",
@@ -57,6 +58,8 @@
         "password-generator": "^2.2.3",
         "pg": "^7.18.2",
         "pg-hstore": "^2.3.2",
+        "puppeteer": "^8.0.0",
+        "puppeteer-core": "^8.0.0",
         "sequelize": "^4.44.4",
         "sequelize-cli": "^5.5.1",
         "tar": "^4.4.8",
